Scheleton for the app is ready

--- a/Client/ionic-application/src/app/app.component.html
+++ b/Client/ionic-application/src/app/app.component.html
@@ -1,3 +1,6 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <funfest-header></funfest-header>
+  <ion-content>
+    <funfest-master-view></funfest-master-view>
+  </ion-content>
 </ion-app>
