--- a/Client/ionic-application/src/app/master-view/master-view.component.html
+++ b/Client/ionic-application/src/app/master-view/master-view.component.html
@@ -1,3 +1,5 @@
-<p>
-  master-view works!
-</p>
+<ion-list>
+  <ng-container *ngFor="let contest of contests">
+    <funfest-detail></funfest-detail>
+  </ng-container>
+</ion-list>
