Scheleton completed : added tabs for the contest details

--- a/Client/ionic-application/src/app/master-view/master-view.component.html
+++ b/Client/ionic-application/src/app/master-view/master-view.component.html
@@ -1,5 +1,6 @@
 <ion-list>
-  <ng-container *ngFor="let contest of contests">
-    <funfest-detail></funfest-detail>
-  </ng-container>
+
 </ion-list>
+<ng-container *ngFor="let contest of contests">
+  <funfest-detail-item></funfest-detail-item>
+</ng-container>
