--- a/Client/ionic-application/src/app/detail/detail-tabs/detail-tabs.component.html
+++ b/Client/ionic-application/src/app/detail/detail-tabs/detail-tabs.component.html
@@ -1,15 +1,14 @@
-<ion-tabs>
-  <ion-tab-bar>
+<ion-tab-bar>
+  <ion-tab-button>
+    <ion-label>
+      Details
+    </ion-label>
+  </ion-tab-button>
 
-    <ion-tab-button>
-      <ion-label>Details</ion-label>
-    </ion-tab-button>
+  <ion-tab-button>
+    <ion-label>
+      Schedule
+    </ion-label>
+  </ion-tab-button>
+</ion-tab-bar>
 
-    <ion-tab-button>
-      <ion-label>
-        Schedule
-      </ion-label>
-    </ion-tab-button>
-
-  </ion-tab-bar>
-</ion-tabs>
