--- a/Client/ionic-application/src/app/detail/detail.component.html
+++ b/Client/ionic-application/src/app/detail/detail.component.html
@@ -1,23 +1,12 @@
-<ion-list>
-  <ion-item button="true" (click)="expandDetail()">
-    <ion-label>
-      Some contest
-    </ion-label>
-  </ion-item>
+<ion-item button="true" (click)="expandDetail()">
+  <ion-label>
+    Some contest
+  </ion-label>
 
-  <ion-item *ngIf="isExpanded">
-      <funfest-detail-tabs></funfest-detail-tabs>
-  </ion-item>
-
-</ion-list>
+</ion-item>
 
 
-<!--<ion-card>-->
-<!--  <ion-card-header>-->
-<!--    <funfest-detail-tabs></funfest-detail-tabs>-->
-<!--  </ion-card-header>-->
-
-<!--  <ion-card-content>-->
-<!--    some text-->
-<!--  </ion-card-content>-->
-<!--</ion-card>-->
+<ng-container *ngIf="isExpanded">
+  <funfest-detail-tabs></funfest-detail-tabs>
+  <funfest-detail-card></funfest-detail-card>
+</ng-container>
