Front end is fetching data from the backend

--- a/Client/ionic-application/src/app/master-view/master-view.component.html
+++ b/Client/ionic-application/src/app/master-view/master-view.component.html
@@ -1,6 +1,6 @@
 <ion-list>
 
 </ion-list>
-<ng-container *ngFor="let contest of contests">
+<ng-container *ngFor="let contest of listOfContests">
   <funfest-detail-item></funfest-detail-item>
 </ng-container>
