Fixed add contest content and improved details data

--- a/Client/ionic-application/src/app/detail/detail-card/detail-card.component.html
+++ b/Client/ionic-application/src/app/detail/detail-card/detail-card.component.html
@@ -1,13 +1,10 @@
 <ion-card>
   <ion-card-header>
-    <ion-card-subtitle>subtitle</ion-card-subtitle>
-    <ion-card-title>title</ion-card-title>
+    <ion-card-subtitle>{{contest.id}}</ion-card-subtitle>
+    <ion-card-title>{{contest.title}}</ion-card-title>
   </ion-card-header>
 
   <ion-card-content>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet malesuada posuere. Etiam id leo in
-    tortor mollis sollicitudin. Pellentesque at nisl sit amet leo finibus vestibulum. Suspendisse nibh leo, condimentum
-    eu diam at, feugiat tempor nulla. Integer in odio nec nulla blandit hendrerit. Integer molestie felis id scelerisque
-    vestibulum. Nunc congue, dui ut gravida gravida, nibh justo ullamcorper lorem, nec aliquet justo sem ut leo.
+    {{contest.description}}
   </ion-card-content>
 </ion-card>
