--- a/Client/ionic-application/src/app/shared/add-contest/add-contest.component.html
+++ b/Client/ionic-application/src/app/shared/add-contest/add-contest.component.html
@@ -1,5 +1,19 @@
 <ion-list>
+  <ion-list-header>
+    <ion-label color="danger">
+      SAVE CONTEST
+    </ion-label>
+  </ion-list-header>
 
+  <ion-item>
+    <ion-label>Title: </ion-label>
+    <ion-input #title></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Description: </ion-label>
+    <ion-item #description></ion-item>
+  </ion-item>
 
   <section class="full-width">
     <ion-button expand="full" color="secondary">SAVE</ion-button>
