Contest to be saved is transmited to master component

--- a/Client/ionic-application/src/app/master-view/master-view.component.html
+++ b/Client/ionic-application/src/app/master-view/master-view.component.html
@@ -3,7 +3,10 @@
 </ng-container>
 
 <ng-container *ngIf="saveContestMode">
-  <app-add-contest></app-add-contest>
+  <app-add-contest
+    (cancelAddMode)="changeSaveContestModeStatus()"
+    (saveContest)="saveContest($event)"
+  ></app-add-contest>
 </ng-container>
 
 <section class="full-width">
