--- a/Client/ionic-application/src/app/shared/add-contest/add-contest.component.html
+++ b/Client/ionic-application/src/app/shared/add-contest/add-contest.component.html
@@ -12,14 +12,14 @@
 
   <ion-item>
     <ion-label>Description: </ion-label>
-    <ion-item #description></ion-item>
+    <ion-input #description></ion-input>
   </ion-item>
 
   <section class="full-width">
-    <ion-button expand="full" color="secondary">SAVE</ion-button>
+    <ion-button (click)="save(title.value, description.value)" expand="full" color="secondary">SAVE</ion-button>
   </section>
 
   <section class="full-width">
-    <ion-button expand="full" color="secondary">CANCEL</ion-button>
+    <ion-button (click)="cancelModeActivated()" expand="full" color="secondary">CANCEL</ion-button>
   </section>
 </ion-list>
