--- a/Client/ionic-application/src/app/app.component.html
+++ b/Client/ionic-application/src/app/app.component.html
@@ -1,6 +1,16 @@
-<ion-app>
-  <funfest-header></funfest-header>
-  <ion-content>
-    <funfest-master-view></funfest-master-view>
-  </ion-content>
-</ion-app>
+<!--<ion-app>-->
+<!--  <funfest-header></funfest-header>-->
+<!--  <ion-content>-->
+<!--    <funfest-master-view></funfest-master-view>-->
+<!--  </ion-content>-->
+<!--</ion-app>-->
+
+<ion-header>
+  <ion-navbar>
+    <ion-title>
+      FUNFEST
+    </ion-title>
+  </ion-navbar>
+</ion-header>
+
+<router-outlet></router-outlet>
