Created register logic in the backend

--- a/Client/ionic-application/src/app/register/register.component.html
+++ b/Client/ionic-application/src/app/register/register.component.html
@@ -11,7 +11,7 @@
       <ion-col>
         <ion-list inset>
           <ion-item>
-            <ion-input placeholder="Email" name="username" id="usernameField"
+            <ion-input placeholder="Username" name="username" id="usernameField"
                        #email></ion-input>
           </ion-item>
           <ion-item>
