Added offline/online status for the navbar

--- a/Client/ionic-application/src/app/app.component.html
+++ b/Client/ionic-application/src/app/app.component.html
@@ -5,12 +5,5 @@
 <!--  </ion-content>-->
 <!--</ion-app>-->
 
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      FUNFEST
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
+<funfest-header></funfest-header>
 <router-outlet></router-outlet>
