--- a/Client/ionic-application/src/app/header/header.component.html
+++ b/Client/ionic-application/src/app/header/header.component.html
@@ -1,7 +1,7 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-navbar [style.color]="connected ? 'primary' : 'danger'">
     <ion-title>
-      Blank
+      FUNFEST is {{connected? 'online' : 'offline'}}
     </ion-title>
-  </ion-toolbar>
+  </ion-navbar>
 </ion-header>
