Implemented network offline/online evidentation

--- a/Client/ionic-application/src/app/header/header.component.html
+++ b/Client/ionic-application/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary" [style.color]="connected ? 'primary' : 'danger'">
+  <ion-toolbar [color]="connected ? 'primary' : 'danger'">
     <ion-title>
       FUNFEST is {{connected? 'online' : 'offline'}}
     </ion-title>
