Implemented deleted + auto refresh after any crud operation

--- a/Client/ionic-application/src/app/detail/detail.component.html
+++ b/Client/ionic-application/src/app/detail/detail.component.html
@@ -9,4 +9,8 @@
 <ng-container *ngIf="isExpanded">
   <funfest-detail-tabs></funfest-detail-tabs>
   <funfest-detail-card [contest]="contestDetail"></funfest-detail-card>
+
+  <section class="full-width">
+    <ion-button (click)="deleteContest()" expand="block" color="secondary">DELETE CONTEST</ion-button>
+  </section>
 </ng-container>
